# python-solaredged

./: .pre-commit-config.yaml  .yamllint  AGENTS.md  AI_POLICY.md  README.md  THIRD_PARTY_LICENSES.md  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: feature_request.yaml  issue.yaml
.github/workflows/: codeql.yaml  dependency-review.yaml  labels.yaml  linting.yaml  lock.yaml  pr-labels.yaml  release-drafter.yaml  release.yaml  scorecard.yml  tests.yaml  typing.yaml
examples/: control.py  read.py
src/solaredged/: __init__.py  _cli.py  components.py  const.py  exceptions.py  solaredged.py
src/solaredged/cli/: __init__.py  _sanitize.py  async_typer.py  tui.py
tests/: __init__.py  conftest.py  test_community_dumps.py  test_examples.py  test_fuzz.py  test_solaredged.py  test_sunspec_conformance.py
tests/__snapshots__/: test_community_dumps.ambr  test_solaredged.ambr
tests/cli/: __init__.py  test_cli.py  test_tui.py
tests/cli/__snapshots__/: test_cli.ambr
tests/fixtures/: se17k_3phase.json
tests/fixtures/community/: issue565_u1.json  issue565_u3.json  issue755_u1.json  issue768_u125.json  issue827_u1.json  issue827_u2.json  issue895_u1.json  issue895_u2.json  issue913_u1.json  issue929_u1.json  issue944_u1.json
tests/fixtures/sunspec/: README.md  model_1.json  model_103.json  model_203.json
